Fix slick image not showing on load

--- a/wp-content/themes/noia-theme/assets/css/editor-style.css
+++ b/wp-content/themes/noia-theme/assets/css/editor-style.css
@@ -1484,6 +1484,7 @@ hr {
   overflow: hidden;
   margin: 0;
   padding: 0;
+  height: auto !important;
 }
 
 .slick-list:focus {
@@ -1529,7 +1530,6 @@ hr {
   float: left;
   position: relative;
   height: 100%;
-  min-height: 100px;
   max-height: 732px;
   overflow: hidden;
 }
