--- a/wp-content/themes/noia-theme/assets/css/styles.css
+++ b/wp-content/themes/noia-theme/assets/css/styles.css
@@ -2633,6 +2633,7 @@ body.nav-open:after {
   overflow: hidden;
   margin: 0;
   padding: 0;
+  height: auto !important;
 }
 
 .slick-list:focus {
@@ -2678,7 +2679,6 @@ body.nav-open:after {
   float: left;
   position: relative;
   height: 100%;
-  min-height: 100px;
   max-height: 732px;
   overflow: hidden;
 }
