--- a/wp-content/themes/noia-theme/src/styles/components/_slick-slider.scss
+++ b/wp-content/themes/noia-theme/src/styles/components/_slick-slider.scss
@@ -25,6 +25,7 @@
 
 	margin: 0;
 	padding: 0;
+	height: auto !important;
 }
 .slick-list:focus {
 	outline: none;
@@ -73,7 +74,7 @@
 	position: relative;
 
 	height: 100%;
-	min-height: 100px;
+	// min-height: 1px;
 	max-height: 732px;
     overflow: hidden;
 }
